# PhotoChart

./: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/: manage.py
backend/album/: models.py  serializers.py  views.py
backend/album/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/backend/settings/: __init__.py  base.py  development.py  production.py  selfhost.py
backend/catalog/: models.py  serializers.py  views.py
backend/catalog/migrations/: 0001_initial.py
backend/photograph/: apps.py  models.py  serializers.py  views.py
backend/photograph/migrations/: 0001_initial.py  0002_photograph_time_photopath_file_created_at_and_more.py  0003_photograph_has_errors.py  0004_photograph_model_alter_photograph_image.py  0005_remove_photograph_image_photograph_thumbnail.py  0006_photopath_size_alter_photopath_path.py
backend/planner/: models.py  serializers.py  views.py
backend/planner/migrations/: 0001_initial.py
cli/: __init__.py  commands.py  main.py  parser.py
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Album.tsx  Catalog.tsx  PhotoPaths.tsx  Photographs.tsx
photochart/: __init__.py  device.py  exif.py  ingest.py  log.py  protocols.py  resolution.py
photofinder/: __init__.py  backends.py  convert.py  ingest.py  log.py  metadata.py  resolution.py
scripts/: match_errors.py
